50_Wordsearch/program/css/wordsearch.css
/**
* Wordfind.js 0.0.1
* (c) 2012 Bill, BunKat LLC.
* Wordfind is freely distributable under the MIT license.
* For all details and documentation:
*     http://github.com/bunkat/wordfind
*/

.container {
    max-width: 64rem;
    margin: 0 auto;
}

.puzzle-container {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
}

#instruction {
    font-size: 1.2rem;
    font-weight: bold;
    margin: 0.5rem;
}

#right-pane {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

/**
* Styles for the puzzle
*/
#grid {
  border: 1px solid #e3e3e3;
  padding: 0.5rem;
  background-color: #f5f5f5;
}
/*
#puzzle div {
  width: 100%;
  margin: 0 auto;
}
*/

/* style for each square in the puzzle */
#grid .puzzleSquare {
  height: 1.3em;
  width: 1.3em;
  text-transform: uppercase;
  background-color: #f5f5f5;
  border: 0;
  font: 1.2rem sans-serif;
}

button::-moz-focus-inner {
  border: 0;
}

/* indicates when a square has been selected */
#grid .selected {
  background-color: orange;
}

/* indicates that the square is part of a word that has been found */
#grid .found {
  background-color: blue;
  color: white;
}

#grid .solved {
  background-color: purple;
  color: white;
}

/* indicates that all words have been found */
#grid .complete {
  background-color: green;
}

/**
* Styles for the word list
*/
#questions {
  border: 1px solid #e3e3e3;
  max-width: 37.5rem;
  padding: 0.5rem;
  margin: 0 1rem 1rem 0;
  background-color: #f5f5f5;
}

#questions ul {
  list-style-type: none;
}

#questions li {
  padding: 3px 0;
  font: 1em sans-serif;
}

/* indicates that the word has been found */
#questions .wordFound {
  color: red;
}

/**
* Styles for the selected pair
*/
#selected-pair {
    margin: 1rem 0.5rem;
    max-width: 24rem;
}

#selected-word {
    text-transform: uppercase;
    font-size: 1.2rem;
    font-weight: bold;
}

/**
* Styles for the buttons
*/
#btn-show-answer {
    width: 10rem;
}

#btn-show-answer.active {
    background-color: #d9534f;
    border-color: #d9534f;
    color: #fff;
}

/**
* Styles for the mobile
*/
@media screen and (max-width: 24rem) {

    #grid .puzzleSquare {
        font-size: 0.9rem;
    }

}

